--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="controls">
+        <h1>Photon Lab</h1>
+        <div class="inputContainer">
+          <input type="file" />
+        </div>
+        <div class="inputContainer">
+          <label for="brightness"> Brightness </label>
+          <input id="brightness" type="range" min="0" max="200" value="100" />
+        </div>
+        <div class="inputContainer">
+          <label for="contrast"> Contrast </label>
+          <input id="contrast" type="range" min="0" max="200" value="100" />
+        </div>
+        <div class="inputContainer">
+          <label for="saturation"> Saturation </label>
+          <input id="saturation" type="range" min="0" max="200" value="100" />
+        </div>
+        <div class="inputContainer">
+          <label for="blur"> Blur </label>
+          <input id="blur" type="range" min="0" max="30" value="0" />
+        </div>
+        <div class="buttonContainer">
+          <button id="grayscale" class="btn">GrayScale</button>
+          <button id="sepia" class="btn">Sepia</button>
+          <button id="reset" class="btn">Reset</button>
+        </div>
+        <button id="downloadBtn">Bownload Image</button>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
