--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="controls">
         <h1>Photon Lab</h1>
         <div class="inputContainer">
-          <input type="file" />
+          <input class="btnfile" type="file" />
         </div>
         <div class="inputContainer">
           <label for="brightness"> Brightness </label>
@@ -34,7 +34,7 @@
           <button id="sepia" class="btn">Sepia</button>
           <button id="reset" class="btn">Reset</button>
         </div>
-        <button id="downloadBtn">Bownload Image</button>
+        <button id="downloadBtn">Download Image</button>
       </div>
     </div>
     <script src="./script.js"></script>
