--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="controls">
         <h1>Photon Lab</h1>
         <div class="inputContainer">
-          <input class="btnfile" type="file" />
+          <input class="btnfile" type="file" id="inputFile" />
         </div>
         <div class="inputContainer">
           <label for="brightness"> Brightness </label>
