--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Photon Lab</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -14,29 +14,32 @@
           <input class="btnfile" type="file" id="inputFile" />
         </div>
         <div class="inputContainer">
-          <label for="brightness"> Brightness </label>
+          <label for="brightness">Brightness</label>
           <input id="brightness" type="range" min="0" max="200" value="100" />
         </div>
         <div class="inputContainer">
-          <label for="contrast"> Contrast </label>
+          <label for="contrast">Contrast</label>
           <input id="contrast" type="range" min="0" max="200" value="100" />
         </div>
         <div class="inputContainer">
-          <label for="saturation"> Saturation </label>
+          <label for="saturation">Saturation</label>
           <input id="saturation" type="range" min="0" max="200" value="100" />
         </div>
         <div class="inputContainer">
-          <label for="blur"> Blur </label>
+          <label for="blur">Blur</label>
           <input id="blur" type="range" min="0" max="30" value="0" />
         </div>
         <div class="buttonContainer">
-          <button id="grayscale" class="btn">GrayScale</button>
+          <button id="grayScale" class="btn">GrayScale</button>
           <button id="sepia" class="btn">Sepia</button>
           <button id="reset" class="btn">Reset</button>
         </div>
         <button id="downloadBtn">Download Image</button>
       </div>
+      <div class="canvasContainer">
+        <canvas id="canvas"></canvas>
+      </div>
     </div>
-    <script src="./script.js"></script>
   </body>
+  <script src="./script.js"></script>
 </html>
